# memelibre_client

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json  svelte.config.js  todo.md
.github/workflows/: deploy.yaml
src/: app.d.ts  app.html  main.rs
src/controllers/: ads.rs  error.rs  home.rs  meme.rs  mod.rs  not_found.rs  upload.rs
src/lib/components/: Meme.svelte  MemeWithComments.svelte  Navbar.svelte
src/lib/components/icons/: Close.svelte  CommentBubble.svelte  Hamburger.svelte  Like.svelte  Save.svelte  Share.svelte  Tab.svelte
src/lib/types/: index.d.ts  meme.d.ts
src/public/styles/: global.css  home.css  meme.css  navbar.css  notification.css
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/error/: +page.svelte
src/routes/meme/[id]/: +page.server.ts  +page.svelte
src/routes/save/: +page.server.ts  +page.svelte
src/routes/upload/: +page.server.ts  +page.svelte
src/routes/user/put/: +page.svelte
src/templates/: _meme.html  _navbar.html  _notification.html  base.html  error.html  home.html  meme.html  not_found.html  upload.html
static/styles/: global.css  home.css  meme.css  multiple_meme.css  navbar.css  notification.css  save.css  single_meme.css  upload.css
