[package]
name = "memelibre_client"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["compression-gzip", "cors", "fs", "limit", "normalize-path", "set-header", "set-status", "timeout"] }
